test/arrays/claridge/arraySizeMismatch.good
arraySizeMismatch.chpl:3: error: halt reached - array index out of bounds: (4)